--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Завдання по web-програмуванню</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Мій перший сайт на бесплатному хостингу</h1>
